Clean up some imports, fix table alignment, and add relationship model to fantasy match entity.

--- a/web/resources/css/cssLayout.css
+++ b/web/resources/css/cssLayout.css
@@ -114,6 +114,8 @@ a:link:hover, a:visited:hover {
 #content table {
     border-collapse: collapse;
     background-color: lightblue;
+    margin-left: auto;
+    margin-right: auto;
 }
 #content table, #content td, #content tr, #content th {
     text-align: center;
